--- a/games/whackamole/style.css
+++ b/games/whackamole/style.css
@@ -5,14 +5,16 @@
 }
 
 body {
-    font-family: Helvetica;
+    font-family: 'Helvetica';
 }
 
 .wrapper {
     border: 3px solid rgb(165, 0, 0);
     width: 800px;
     height: 600px;
+    position: absolute;
     top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     background-image: url(./assets/bg.jpg);
     background-size: cover;
@@ -26,7 +28,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border: 3px solid rgb(165, 0, 0);
+    /* border: 3px solid rgb(165, 0, 0); */
     width: 200px;
     height: 100px;
     text-align: center;
@@ -58,8 +60,8 @@ button {
 }
 
 .game {
-    border: 2px solid black;
-    width: 200px;
+    /* border: 2px solid black; */
+    width: 600px;
     height: 400px;
     margin: 70px auto;
     z-index: 200;
@@ -68,18 +70,55 @@ button {
 }
 
 .hole {
-    border: 2px solid red;
+    overflow: hidden;
     flex: 1 0 33.33%;
+    position: relative;
+    background-image: url(./assets/hole.png);
+    background-size: 60%;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    
+    
+    
 
 }
 
 .hole:after {
     content: '';
     display: block;
-    background-color: black;
+    
+    
+    
     position: absolute;
     width: 100%;
     z-index: 2;
     bottom: -30px;
     background-size: contain;
+}
+
+.mole {
+    
+    position: absolute;
+    top:100%;
+    width:100%;
+    height: 100%;
+    transition: 0.4s;
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
+
+.mole#small {
+    background-image: url(./assets/piphead.png);
+    background-size: 100%;
+}
+
+.mole#large {
+    background-image: url(./assets/padhead.png);
+    background-size: 80%;
+    background-position: center;
+
+}
+
+.hole.up .mole {
+    top: 0%;
 }
