--- a/index.css
+++ b/index.css
@@ -1,11 +1,17 @@
 #canvas1 {
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    pointer-events: none;}
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  pointer-events: none;
+}
 
 .container {
-    z-index: 100;
+  z-index: 100;
+}
+#contact-box {
+  display: flex;
+  flex-wrap: nowrap;
 }
